# codecrafters-bittorrent-c

./: CMakeLists.txt  README.md
app/: command.c  command.h  decoder.c  decoder.h  main.c  teensy-sha1.c
